search form scroll

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </section>
 
     <!-- Home Kitchen Section -->
-    <section class="kitchen-section">
+    <section class="kitchen-section" id="home-kitchen">
       <div class="home-kitchen">
         <h2 class="section-title">Home Kitchen</h2>
         <div class="kitchen-grid" id="kitchenGrid">
