--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
         <span></span>
       </button>
       <nav class="nav-links">
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#about">Menu</a>
-        <a href="#about">Blog</a>
-        <a href="#about">Contact</a>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Menu</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
       </nav>
       <div class="nav-icons">
         <img
@@ -257,11 +257,11 @@
 
           <nav class="footer-nav">
             <ul class="footer-menu">
-              <li><a href="#home">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#menu">Menu</a></li>
-              <li><a href="#blog">Blog</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Menu</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contact</a></li>
             </ul>
           </nav>
 
